<package>
  <name></name>
  <version>1.0.0</version>
  <description>This stack contains an implementation of kinematics for the PR2 robot.</description>
  <maintainer email="sachin@abc.com">Maintained by Sachin Chitta</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/pr2_kinematics</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Maintained by Sachin Chitta</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->


  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>pr2_arm_kinematics</run_depend>
  <run_depend>pr2_arm_kinematics_constraint_aware</run_depend>

  <!-- Dependencies needed only for running tests. -->







</package>
